Simple Site with Ingress/service-site.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-site-nginx
  namespace: site
spec:
  selector:
    app: site-nginx
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
