Simple Site with Ingress/ingress-site.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-site
  namespace: site
spec:
  rules:
  - host: site.lab.int
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-site-nginx
            port:
              number: 80
  ingressClassName: nginx
